# incredibleBulkAPI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  cache_tools.py  docker-compose.test.yaml  docker-compose.yaml  notes.md  pyproject.toml  requirements.txt
bulk/: __init__.py  background.py  background_fetch.py  bulk_data.py  bulk_images.py  cache_tools.py  data.py  fetch.py  image_model.py  site_model.py  viewer.html
nginx/: Dockerfile  nginx.conf
sanic_app/: app.py  background_fetch.py  regester_sites.py  static_gzip.py
sites/: __init__.py  bff_car.py  bff_mobile.py
src/: app.py  static_gzip.py
src/bulk/: data.py
static/: bulk_image_viewer.html
